[package]
name = "sma_exporter"
version = "0.4.0"
authors = ["dr0ps https://github.com/dr0ps"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = {version= "0.13", default-features = false}
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
lazy_static = "1.5"
socket2 = "0.5"
